--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.1",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/sentry": "^4.3.4",
     "cross-env": "^7.0.2",
     "element-ui": "^2.13.2",
     "nuxt": "^2.14.0"
