--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.1",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/sentry": "^4.3.4",
     "cross-env": "^7.0.2",
     "element-ui": "^2.13.2",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "raven-js": "^3.27.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -28,7 +28,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3"
   }
