--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "release": "cross-env NODE_ENV=production BASE=release nuxt build",
     "test": "cross-env NODE_ENV=production BASE=test nuxt build",
     "start": "nuxt start",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "generate": "nuxt generate"
   },
   "dependencies": {
@@ -21,14 +22,22 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
-    "eslint": "^7.7.0",
+    "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-html": "^6.0.3",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
   }
 }
